--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinApp">
-        <activity android:name=".CalenderActivity">
+        <activity android:name=".CapitalActivity"></activity>
+        <activity android:name=".CountryActivity" />
+        <activity android:name=".DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ListViewActivity" />
+        <activity android:name=".CalenderActivity" />
         <activity android:name=".TimePickerActivity" />
-        <activity android:name=".DatePickerActivity">
-        </activity>
+        <activity android:name=".DatePickerActivity" />
         <activity android:name=".CalculateAlertActivity" />
         <activity android:name=".AlertActivity" />
         <activity android:name=".AutoCompleteActivity" />
